Fixing CSS reference

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="./Develop/assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <!--Not the best SEO icon but it's public domain-->
     <link rel="icon" href="https://www.publicdomainpictures.net/pictures/370000/velka/seo-icon.jpg">
     <title>SEO Challenge</title>
